--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -18,11 +19,14 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.3.24",
-    "next": "14.2.5",
+    "framer-motion": "^11.9.0",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
